--- a/ImageService.Communication/ImageService.Communication.csproj
+++ b/ImageService.Communication/ImageService.Communication.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2C4F7489-7ED4-4CBD-B994-63C01CB56467}</ProjectGuid>
+    <ProjectGuid>{C4E45138-9562-4991-81D0-579E657AC32F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ImageService.Infrastructure</RootNamespace>
-    <AssemblyName>ImageService.Infrastructure</AssemblyName>
+    <RootNamespace>ImageService.Communication</RootNamespace>
+    <AssemblyName>ImageService.Communication</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,9 +43,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandRecievedEventArgs.cs" />
-    <Compile Include="Enums\CommandEnum.cs" />
+    <Compile Include="Client\IClientCommunicationChannel.cs" />
+    <Compile Include="Client\TcpClientChannel.cs" />
+    <Compile Include="ICommunicationChannel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server\IClientHandler.cs" />
+    <Compile Include="Server\IServerCommunicationChannel.cs" />
+    <Compile Include="Server\TcpClientHandler.cs" />
+    <Compile Include="Server\TcpServerChannel.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ImageService.Infrastructure\ImageService.Infrastructure.csproj">
+      <Project>{2c4f7489-7ed4-4cbd-b994-63c01cb56467}</Project>
+      <Name>ImageService.Infrastructure</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
