--- a/ImageService.Communication/ImageService.Communication.csproj
+++ b/ImageService.Communication/ImageService.Communication.csproj
@@ -45,17 +45,19 @@
   <ItemGroup>
     <Compile Include="Client\IClientCommunicationChannel.cs" />
     <Compile Include="Client\TcpClientChannel.cs" />
-    <Compile Include="ICommunicationChannel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\IClientHandler.cs" />
     <Compile Include="Server\IServerCommunicationChannel.cs" />
-    <Compile Include="Server\TcpClientHandler.cs" />
     <Compile Include="Server\TcpServerChannel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ImageService.Infrastructure\ImageService.Infrastructure.csproj">
       <Project>{2c4f7489-7ed4-4cbd-b994-63c01cb56467}</Project>
       <Name>ImageService.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ImageService.Logging\ImageService.Logging.csproj">
+      <Project>{3e95bc18-4990-40b7-9b1b-e216f3ccae0f}</Project>
+      <Name>ImageService.Logging</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
