--- a/ImageService/ImageService/ImageService/App.config
+++ b/ImageService/ImageService/ImageService/App.config
@@ -4,8 +4,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <appSettings>
-    <add key="Handler" value="C:\Users\Doreen\Documents\test\from1;C:\Users\Doreen\Documents\test\from2"/>
-    <add key="OutputDir" value="C:\Users\Doreen\Documents\test\to"/>
+    <add key="Handler" value="C:\Users\ophirbh\Desktop\from1;C:\Users\ophirbh\Desktop\from2"/>
+    <add key="OutputDir" value="C:\Users\ophirbh\source\repos\ImageService\ImageServiceWeb\to"/>
     <add key="SourceName" value="ImageServiceSource"/>
     <add key="LogName" value="ImageServiceLog"/>
     <add key ="ThumbnailSize"  value ="120"/>
