--- a/ImageServiceWeb/ImageServiceWeb.csproj
+++ b/ImageServiceWeb/ImageServiceWeb.csproj
@@ -108,6 +108,12 @@
     <Content Include="Scripts\jquery-migrate-3.0.0.js" />
     <Content Include="Scripts\jquery-migrate-3.0.0.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="to\2017\10\20171001_134604.jpg" />
+    <Content Include="to\2017\10\20171001_142510.jpg" />
+    <Content Include="to\2017\10\20171001_142512.jpg" />
+    <Content Include="to\Thumbnails\2017\10\20171001_134604.jpg" />
+    <Content Include="to\Thumbnails\2017\10\20171001_142510.jpg" />
+    <Content Include="to\Thumbnails\2017\10\20171001_142512.jpg" />
     <Content Include="Web.config" />
     <Content Include="Views\First\Config.cshtml" />
   </ItemGroup>
@@ -120,6 +126,7 @@
     <Compile Include="Models\ConfigModel.cs" />
     <Compile Include="Models\LogsModel.cs" />
     <Compile Include="Models\MainModel.cs" />
+    <Compile Include="Models\PhotosCollectionModel.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\PhotoPresenterModel.cs" />
     <Compile Include="Models\PhotosModel.cs" />
