handleClient excluded from imageServer.

--- a/ImageService/ImageService.csproj
+++ b/ImageService/ImageService.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageService\ImageService\ClientHandler\HandleGuiClient.cs" />
     <Compile Include="ImageService\ImageService\Commands\GetConfigCommand.cs" />
     <Compile Include="ImageService\ImageService\Commands\LogCommand.cs" />
     <Compile Include="ImageService\ImageService\ImageService.cs">
