--- a/ImageService/ImageService/ImageService/App.config
+++ b/ImageService/ImageService/ImageService/App.config
@@ -5,7 +5,8 @@
   </startup>
   <appSettings>
     <add key="Handler" value="C:\Users\Doreen\Documents\test\from1;C:\Users\Doreen\Documents\test\from2"/>
-    <add key="OutputDir" value="C:\Users\Doreen\source\repos\ImageService\ImageServiceWeb\to"/>
+    <!--add key="OutputDir" value="C:\Users\Doreen\source\repos\ImageService\ImageServiceWeb\to"/-->
+    <add key="OutputDir" value="C:\Users\Doreen\Documents\test\to"/>
     <add key="SourceName" value="ImageServiceSource"/>
     <add key="LogName" value="ImageServiceLog"/>
     <add key ="ThumbnailSize"  value ="120"/>
